# hermes-agent

./: .claudeignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SOUL.md  pyproject.toml  railway.toml  ruff.toml  server.py  start.sh
agents/finance/: .env.example  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  railway.toml  ruff.toml
agents/finance/.claude/: settings.json
agents/finance/.claude/agent-memory/product/: MEMORY.md  project_miniapp_status.md  (+1 more)
agents/finance/.claude/agents/: backend-developer.md  dev.md  devops.md  software-architect.md
agents/finance/alembic/: env.py
agents/finance/alembic/versions/: 0001_initial_schema.py  0002_add_category_budgets.py  0003_fix_accounts_schema.py  0005_purge_null_monobank_id_accounts.py  0007_add_mode_and_is_fop.py  0008_add_phase3_domains.py  0009_add_pockets.py  0010_account_hidden_flag.py  0013_transaction_rules.py
agents/finance/finance_api/: composition.py  main.py  schemas.py
agents/finance/finance_api/bot/: telegram_fmt.py
agents/finance/finance_api/core/: config.py
agents/finance/finance_api/routers/: accounts.py  budgets.py  forecast.py  goals.py  health.py  miniapp.py  sync.py  transactions.py
agents/finance/finance_api/static/: miniapp.html
agents/finance/tests/: conftest.py
agents/finance/tests/unit/: test_app_composition.py  test_auth_webapp.py  test_buy_list_queries.py  test_categories.py  test_debt_queries.py  test_forecast_queries.py  test_mcc.py  test_period_math.py  test_pockets_queries.py  test_queries_multicurrency.py  test_sync_is_fop.py  test_trips_queries.py
bots/doer/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
bots/doer/.claude/agents/: devops.md
bots/doer/doer_api/: composition.py  main.py  telegram.py
bots/doer/doer_api/agent/: loop.py  projects.py  tools.py
bots/doer/doer_api/core/: config.py
bots/doer/doer_api/routers/: bot.py  tasks.py
(+236 files in other folders)
