[project]
name = "hermes-admin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "openai-whisper>=20240930",   # STT — local voice-to-text (free)
]
