# build: 2026-05-28
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "structlog>=24.4.0",
    "apscheduler>=3.10.0",
    "httpx>=0.28.0",
    "python-telegram-bot[ext]>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-dotenv>=0.5.2",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["finance_api"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
env_files = [".env.test"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["finance_api"]
